--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 
     <div class="container mx-auto px-4 max-w-none" style="flex: 1">
       <div>
-        <p class="mt-6 md:mt-12" style="text-align: justify; line-height: 1.75;">Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML, especially Deep Learning and Generative AI. Welcome to my blog!</p>
+        <p class="mt-6 md:mt-16" style="text-align: justify; line-height: 1.75; font-size: 1.125rem;">Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML, especially Deep Learning and Generative AI. Welcome to my blog!</p>
       </div>
 
       <div class="border-t" style="margin-top: 1.5rem; padding-top: 1rem;">
@@ -16,7 +16,7 @@
               <div>
                 <span class="article-date text-sm" style="display: inline-block; width: 100px;">{{ .Date.Format "Jan 2, 2006" }}</span>
               </div>
-              <div class="mt-2 md:mt-0">
+              <div class="mt-2 md:mt-0" style="font-size: 1.125rem;">
                 <a style="color: #000000 !important;" href="{{ .RelPermalink }}">{{ .Title }}</a>
               </div>
             </div>
