Add highlight js to style code snippets

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,14 +1,16 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="CIGnBZCqH2WX_UMtk5WQP3UJg6UIk_2HNNlBAnLFatA" />
 
   <title>Nisanth Chunduru</title>
   <link rel="shortcut icon" href="/images/logo.svg">
 
-  <link rel="stylesheet" href="https://use.typekit.net/npb7rzs.css">
-
   <link rel="stylesheet" href="/css/tailwind.compiled.css">
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/pygments-github.css">
 
-  <meta name="google-site-verification" content="CIGnBZCqH2WX_UMtk5WQP3UJg6UIk_2HNNlBAnLFatA" />
+  <link rel="stylesheet" href="https://use.typekit.net/npb7rzs.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 </head>
