--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,7 +3,8 @@
   <meta name="google-site-verification" content="CIGnBZCqH2WX_UMtk5WQP3UJg6UIk_2HNNlBAnLFatA" />
 
   <title>Nisanth Chunduru</title>
-  <link rel="shortcut icon" href="/images/logo.svg">
+
+  <link rel="shortcut icon" href="/images/square-profile-photo.jpg">
 
   <link rel="stylesheet" href="/css/tailwind.compiled.css">
   <link rel="stylesheet" href="/css/main.css">
