--- a/layouts/partials/posts/date.html
+++ b/layouts/partials/posts/date.html
@@ -1,1 +1,1 @@
-<p class="article-date" style="margin-top: 0.25rem;">{{ .Date.Format "January 2, 2006" }}</p>
+<p class="text-gray-600" style="margin-top: 0.25rem;">{{ .Date.Format "Jan 2, 2006" }}</p>
