--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -5,18 +5,9 @@
     {{ partial "header.html" . }}
 
     <div class="container mx-auto mt-8 px-4 prose sm:prose-lg max-w-none" style="flex: 1">
-      <a href="/" class="inline-flex items-center py-2 px-4 border rounded-full">
-        <svg class="h-2 w-2" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-          <path d="m 12 2 c 0 -0.265625 -0.105469 -0.519531 -0.292969 -0.707031 c -0.390625 -0.390625 -1.023437 -0.390625 -1.414062 0 l -6 6 c -0.1875 0.1875 -0.292969 0.441406 -0.292969 0.707031 s 0.105469 0.519531 0.292969 0.707031 l 6 6 c 0.390625 0.390625 1.023437 0.390625 1.414062 0 c 0.1875 -0.1875 0.292969 -0.441406 0.292969 -0.707031 s -0.105469 -0.519531 -0.292969 -0.707031 l -5.292969 -5.292969 l 5.292969 -5.292969 c 0.1875 -0.1875 0.292969 -0.441406 0.292969 -0.707031 z m 0 0" fill="#2e3436"/>
-        </svg>
-        <span class="ml-2 text-sm">
-          Back to Home
-        </span>
-      </a>
-
       <div class="article mt-6">
         <h1 class="text-center text-2xl" style="margin-bottom: 0.5rem;">{{ .Title }}</h1>
-        <p class="article-date text-center" style="margin-top: 0.5rem">{{ .Date.Format "Jan 2, 2006" }}</p>
+        <p class="text-gray-600 text-center" style="margin-top: 0.5rem">{{ .Date.Format "Jan 2, 2006" }}</p>
 
         <div style="text-align: justify; overflow-wrap: break-word;">{{ .Content }}</div>
       </div>
