--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
     <div class="container mx-auto px-4 max-w-none" style="flex: 1">
       <div>
         <p class="mt-4 md:mt-4 text-center" style="line-height: 1.75; font-size: 1.125rem;">
-          Hi 👋 I'm Nisanth Chunduru. I’m an Engineering Lead proficient in Full-stack development and DevOps and passionate about AI/ML, especially Deep Learning and Generative AI. Welcome to my blog!
+          Engineering Lead proficient in Full-stack development / DevOps and passionate about Deep Learning / Generative AI. Enjoys collaborating with exceptional engineers. Previously led Backend Eng. & DevOps at supportbee.com
         </p>
       </div>
 
