--- a/templates/bookmarks.liquid
+++ b/templates/bookmarks.liquid
@@ -1,13 +1,13 @@
 <html>
-  {{ partial "head.html" . }}
+  {% render 'head' %}
 
   <body class="flex flex-col" style="min-height: 100vh;">
-    {{ partial "header.html" . }}
+    {% render 'header' %}
 
     <div class="container mx-auto px-4 mt-8 prose sm:prose-lg max-w-none prose-h1:text-center" style="flex: 1">
       <div style="text-align: justify; overflow-wrap: break-word;">{{ .Content }}</div>
     </div>
 
-    {{ partial "footer.html" . }}
+    {% render 'footer' %}
   </body>
 </html>
