Modify Sinatra to serve /about and /bookmarks pages

--- a/templates/about.liquid
+++ b/templates/about.liquid
@@ -5,7 +5,7 @@
     {% render 'header' %}
 
     <div class="container mx-auto px-4 mt-8 prose sm:prose-lg max-w-none prose-h1:text-center" style="flex: 1">
-      <div style="text-align: justify; overflow-wrap: break-word;">{{ content }}</div>
+      <div style="text-align: justify; overflow-wrap: break-word;">{{ html }}</div>
     </div>
 
     {% render 'footer' %}
