--- a/templates/_footer.liquid
+++ b/templates/_footer.liquid
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4 pt-8 my-8 border-t text-center">
   <p>
-    Built upon <a href="https://notion.so" target="_blank">Notion</a> & <a href="https://sinatrarb.com" target="_blank">Sinatra</a>. Source code is available at <a href="https://github.com/nisanthchunduru/nisanthchunduru.github.io" target="_blank">GitHub</a>.
+    Built upon <a href="https://notion.so" target="_blank">Notion</a> & <a href="https://sinatrarb.com" target="_blank">Sinatra</a>. <a style="text-decoration: underline;" href="https://github.com/nisanthchunduru/nisanthchunduru.github.io" target="_blank">Source Code</a>.
   </p>
 </div>
