Configure Sinatra to listen to 0.0.0.0, to permit all hosts and to fingerprint assets

--- a/templates/_head.liquid
+++ b/templates/_head.liquid
@@ -6,8 +6,8 @@
 
   <link rel="shortcut icon" href="/images/square-profile-photo.jpg">
 
-  <link rel="stylesheet" href="/css/tailwind.compiled.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="{{ 'css/tailwind.compiled.css' | asset_url }}">
+  <link rel="stylesheet" href="{{ 'css/main.css' | asset_url }}">
 
   <link rel="stylesheet" href="https://use.typekit.net/npb7rzs.css">
 
