Sort posts by date
Also add liquid filters to sort and to parse and format a timestamp

--- a/templates/partials/posts/_date.liquid
+++ b/templates/partials/posts/_date.liquid
@@ -1,1 +1,1 @@
-<p class="text-gray-600" style="margin-top: 0.25rem;">{{ date }}</p>
+<p class="text-gray-600" style="margin-top: 0.25rem;">{{ date | format_time }}</p>
