--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -13,7 +13,8 @@
 
       <div class="border-t mt-12">
         <div class="text-center">
-          {% for post in posts %}
+          {% assign sorted_posts = posts | sort_by: "date" %}
+          {% for post in sorted_posts %}
             {% unless post.draft %}
               <div class="mt-12">
                 <h2 class="text-2xl sm:text-3xl font-bold" style="margin-bottom: 0px;">
