--- a/templates/post.liquid
+++ b/templates/post.liquid
@@ -7,7 +7,7 @@
     <div class="container mx-auto mt-8 px-4 prose sm:prose-lg max-w-none" style="flex: 1">
       <div class="article mt-6">
         <h1 class="text-center text-2xl" style="margin-bottom: 0.5rem;">{{ title }}</h1>
-        <p class="text-gray-600 text-center" style="margin-top: 0.5rem">{{ date }}</p>
+        <p class="text-gray-600 text-center" style="margin-top: 0.5rem">{{ date | format_time }}</p>
 
         <div style="text-align: justify; overflow-wrap: break-word;">{{ html }}</div>
       </div>
